--- a/developpements/packages/server/package.json
+++ b/developpements/packages/server/package.json
@@ -34,6 +34,7 @@
     "@nestjs/core": "^9.4.0",
     "@nestjs/microservices": "^9.4.0",
     "@nestjs/platform-express": "^9.4.0",
+    "@nestjs/swagger": "^6.3.0",
     "@nestjs/terminus": "^9.2.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
@@ -45,6 +46,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^4.4.1",
     "rxjs": "^7.8.0",
+    "swagger-cli": "^4.0.4",
+    "swagger-ui-express": "^4.6.2",
     "winston": "^3.8.2",
     "winston-transport": "^4.5.0"
   },
@@ -57,6 +60,7 @@
     "@types/lodash": "^4.14.192",
     "@types/node": "^18.15.11",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
     "@typescript-eslint/parser": "^5.57.1",
     "eslint": "^8.37.0",
